--- a/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
+++ b/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="dc500" binding="_mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="26" y="23" width="614" height="572"/>
+      <xy x="26" y="23" width="737" height="572"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -395,7 +395,7 @@
                   <horizontalAlignment value="10"/>
                   <icon value="com/l7tech/console/resources/Warning16.png"/>
                   <requestFocusEnabled value="true"/>
-                  <text value="The port number must be a number between 1 and 65535."/>
+                  <text value="The port number must be a number between 1 and 65535, or a context variable."/>
                 </properties>
               </component>
             </children>
