--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
@@ -3,9 +3,11 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
-      <xy x="48" y="54" width="572" height="475"/>
+      <xy x="48" y="54" width="572" height="505"/>
     </constraints>
     <properties>
+      <minimumSize width="487" height="366"/>
+      <preferredSize width="487" height="366"/>
       <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
@@ -157,7 +159,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="35976" class="javax.swing.JLabel">
+              <component id="35976" class="javax.swing.JLabel" binding="extensionsLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="101" height="15"/>
