--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/ConditionsWizardStepPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/ConditionsWizardStepPanel.form
@@ -3,7 +3,7 @@
   <grid id="b1322" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="12" y="42" width="525" height="251"/>
+      <xy x="12" y="42" width="544" height="276"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -77,7 +77,7 @@
           </grid>
         </constraints>
       </hspacer>
-      <grid id="a65d" binding="validityPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a65d" binding="validityPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
@@ -87,7 +87,7 @@
         <children>
           <component id="3c44f" class="javax.swing.JLabel" binding="notBeforeLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="false"/>
@@ -97,7 +97,7 @@
           </component>
           <component id="cde95" class="javax.swing.JLabel" binding="notOnOrAfterLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="false"/>
@@ -107,7 +107,7 @@
           </component>
           <component id="cb505" class="javax.swing.JSpinner" binding="notBeforeSpinner">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="75" height="-1"/>
               </grid>
             </constraints>
@@ -117,7 +117,7 @@
           </component>
           <component id="a980" class="javax.swing.JSpinner" binding="notOnOrAfterSpinner">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="75" height="-1"/>
               </grid>
             </constraints>
@@ -125,12 +125,21 @@
               <enabled value="false"/>
             </properties>
           </component>
-          <component id="f7ffb" class="javax.swing.JCheckBox" binding="validityCheckbox">
+          <component id="af951" class="javax.swing.JRadioButton" binding="defaultValidityRadioButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Add &amp;Validity Period Condition"/>
+              <selected value="true"/>
+              <text value="Use &amp;Default Validity Period Condition"/>
+            </properties>
+          </component>
+          <component id="87c15" class="javax.swing.JRadioButton" binding="specifyValidityRadioButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Customize &amp;Validity Period Condition:"/>
             </properties>
           </component>
         </children>
@@ -144,4 +153,10 @@
       </vspacer>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="validityPeriodButtonGroup">
+      <member id="af951"/>
+      <member id="87c15"/>
+    </group>
+  </buttonGroups>
 </form>
